# pdfcrop.github.io-tauri

./: .gitignore  BUILDING.md  README.md
.notes/: windows-desktop-conversion-report.md
pdfcrop/: .gitignore  Cargo.toml  README.md
pdfcrop/.cargo/: config.toml
pdfcrop/.github/workflows/: rust-test.yml
pdfcrop/examples/: crop_online_pdf.rs  crop_shapes_pdf.rs
pdfcrop/examples/pdfcrop.github.io/: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
pdfcrop/examples/pdfcrop.github.io/src-tauri/: Cargo.toml  tauri.conf.json
pdfcrop/examples/pdfcrop.github.io/src-tauri/src/: main.rs
pdfcrop/examples/pdfcrop.github.io/src/js/: app.ts  bbox-overlay.ts  platform-file-io.ts
pdfcrop/src/: crop.rs  error.rs  ghostscript.rs  lib.rs  main.rs  margins.rs  pdf_ops.rs  wasm.rs
pdfcrop/src/bbox/: annotations.rs  mod.rs  render.rs
pdfcrop/src/content_filter/: bbox_utils.rs  font.rs  mod.rs  render_fallback.rs
pdfcrop/tests/: compare_with_original.sh  test_bbox_accuracy.sh  test_pdfs.txt  test_visual.py
