[package]
name = "pdfcrop"
version = "0.1.1"
edition = "2021"
rust-version = "1.86"
default-run = "pdfcrop"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pdfcrop/pdfcrop"
description = "PDF cropping library and command-line tool with rendering-based bbox detection"
keywords = ["pdf", "crop", "margin", "bbox", "cli"]
categories = ["multimedia", "parsing", "command-line-utilities"]

# Library configuration
[lib]
name = "pdfcrop"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # rlib for Rust, cdylib for WASM

# Binary configuration
[[bin]]
name = "pdfcrop"
path = "src/main.rs"

[dependencies]
lopdf = "0.38"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# Parallel processing for multi-page PDFs (optional for WASM compatibility)
rayon = { version = "1.10", optional = true }
# Rendering-based bbox detection
hayro = "0.4"
hayro-interpret = "0.4"
vello_cpu = { version = "0.0.4", default-features = false, features = ["std", "png"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "Url",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"  # Better panic messages in browser console
wasm-logger = "0.2"  # Logging support in browser console
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon"]  # Enable parallel processing (requires rayon)
wasm-parallel = ["parallel", "wasm-bindgen-rayon"]  # Parallel processing in WASM

[dev-dependencies]
shapdf = "0.2"  # Generate test PDF files with shapes
reqwest = { version = "0.12", features = ["blocking"] }  # HTTP client for downloading PDFs
